# bb-calc

./: .gitattributes  .gitignore  .npmrc  .oxlintrc.json  .prettierignore  .taplo.toml  Cargo.toml  README.md  build.rs  index.d.ts  index.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: CI.yml  claude-code-review.yml  claude.yml
__test__/: index.spec.ts
apps/cli/: Cargo.toml  LICENSE-MIT
apps/cli/src/: main.rs
apps/web/: .env.example  README.md  package.json  tsconfig.json  vite.config.ts
apps/web/src/: routeTree.gen.ts  router.tsx  styles.css
apps/web/src/components/: ArValue.tsx  AuthControl.tsx  BuildsPanel.tsx  Button.tsx  CharacterHeader.tsx  CustomGemForm.tsx  CustomGemLibrary.tsx  GemForm.tsx  GemFormModal.tsx  GemList.tsx  GemPickerModal.tsx  GemsPanel.tsx  InventoryView.tsx  LoginModal.tsx  OptimizeResults.tsx  OptimizerApp.tsx  SaveBuildModal.tsx  SaveUpload.tsx  SavesPanel.tsx  SharedBuildView.tsx  StatsDisplay.tsx  StorageIcon.tsx  Tabs.tsx  TargetSelect.tsx  WeaponCard.tsx  WeaponSelect.tsx
apps/web/src/lib/: auth.tsx  bb-calc.ts  buildStorage.ts  builds.ts  customGems.ts  format.ts  gemEffects.ts  gems.ts  saves.ts  supabase.ts  (+1 more)
data/: weapons.json
docs/: auth-persistence-design.md
infra/terraform/: .gitignore  .terraform.lock.hcl  README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
lib/: index.ts
src/: calc.rs  lib.rs  optimizer.rs  test_support.rs
supabase/: config.toml
supabase/migrations/: 20260626120000_init_auth_persistence.sql  20260630201544_gem_structured_effects.sql
(+8 files in other folders)
