[package]
name = "bb-calc"
version = "0.1.0"
edition = "2024"
description = "Bloodborne Attack Rating calculator"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jhickey/bb-calc"

exclude = [
    "data/saves/*",
]

[dependencies]

[build-dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
